2007-12-04 [colin]	3.1.0cvs55

	* src/mainwindow.c
	* src/mainwindow.h
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_receive.c
		MAEMO: Fix bug 1199, 'Tie into LED for new mail alert'

2007-12-04 [wwp]	3.1.0cvs54

	* src/prefs_other.c
		Fix for bug #1419.

2007-12-04 [holger]	3.1.0cvs53

	* src/addrduplicates.c
	* src/addrduplicates.h
		Export addressbook entry deletion

2007-12-04 [colin]	3.1.0cvs52

	* tools/Makefile.am
	* tools/README.sylprint
	* tools/sylprint.pl
	* tools/sylprint.rc
		Fix debian bug #454089 (symlink attack in TMP directory)
		http://secwatch.org/advisories/1019661/ :
		Remove the buggy script, which was unmaintained anyway
	* src/news.c
	* src/procmsg.c
		Store things in our private tmp directory.

2007-12-03 [colin]	3.1.0cvs51

	* src/folder.c
	* src/folder.h
	* src/folderview.c
	* src/imap.c
	* src/mainwindow.c
		Fix update problem when getting remote tags
	* src/prefs_matcher.c
		Rework GUI to make it better. Patch by Pawel
		Pekala

2007-12-03 [colin]	3.1.0cvs50

	* src/etpan/imap-thread.c
	* src/etpan/nntp-thread.c
		Fix bug 1417, 'Network log doesn't reveal 
		enough NNTP errors'

2007-12-02 [iwkse]	3.1.0cvs49

	* src/plugins/dillo_viewer/dillo_prefs.c
			Insert dillo under the Plugins menu

2007-12-01 [paul]	3.1.0cvs48

	* src/html.c
		add these variant forms
		Thanks to Colin

2007-12-01 [paul]	3.1.0cvs47

	* src/matcher.c
		fix a typo

2007-12-01 [paul]	3.1.0cvs46

	* po/POTFILES.in
		add the new addrcustomattr.c file

2007-11-29 [colin]	3.1.0cvs45

	* src/common/ssl_certificate.c
		Use the more modern getaddrinfo instead of 
		gethostbyname when possible

2007-11-28 [colin]	3.1.0cvs44

	* src/summaryview.c
		Maybe fix bug 1410 and other crash reports
		in summaryview since cvs38.

2007-11-28 [wwp]	3.1.0cvs43

	* src/prefs_summary_open.c
		Guard against an empty list of actions to perform
		when opening a folder (or migration defaults could
		be introduced, confusing).

2007-11-28 [colin]	3.1.0cvs42

	* src/folderview.c